button component rename

--- a/docs/_includes/metafooter.html
+++ b/docs/_includes/metafooter.html
@@ -35,7 +35,7 @@
     {% endif %}
 {% endif %}
 <div class="b-t m-t-8 p-t-4 al-r">
-    <a class="btn btn--small btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
+    <a class="button button--small button--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
         <span>Edit this page</span>
     </a>
 </div>
