--- a/src/components/button/buttonflat.less
+++ b/src/components/button/buttonflat.less
@@ -3,7 +3,7 @@
 // base
 // ====
 
-.btn.btn--flat {
+.button.button--flat {
     
     border-color: transparent;
     box-shadow: none;
@@ -26,8 +26,8 @@
 // modifiers
 // =========
 
-.btn.btn--flat {
-    .constr-btnFlat(
+.button.button--flat {
+    .constr-buttonFlat(
         @txtColor: @color-base-8,
         @bgColor: @color-base-22,
         @bgColorHover: @color-base-21,
@@ -35,8 +35,8 @@
     )
 }
 
-.btn--flat.btn--primary {
-    .constr-btnFlat(
+.button--flat.button--primary {
+    .constr-buttonFlat(
         @txtColor: @color-white,
         @bgColor: @color-primary-10,
         @bgColorHover: @color-primary-9,
@@ -44,8 +44,8 @@
     )
 }
 
-.btn--flat.btn--light {
-    .constr-btnFlat(
+.button--flat.button--light {
+    .constr-buttonFlat(
         @txtColor: @color-base-10,
         @bgColor: @color-base-24,
         @bgColorHover: @color-base-23,
@@ -53,8 +53,8 @@
     )
 }
 
-.btn--flat.btn--dark {
-    .constr-btnFlat(
+.button--flat.button--dark {
+    .constr-buttonFlat(
         @txtColor: @color-white,
         @bgColor: @color-base-10,
         @bgColorHover: @color-base-9,
@@ -62,8 +62,8 @@
     )
 }
 
-.btn--flat.btn--attention {
-    .constr-btnFlat(
+.button--flat.button--attention {
+    .constr-buttonFlat(
         @txtColor: @color-attention-6,
         @bgColor: @color-attention-20,
         @bgColorHover: @color-attention-19,
@@ -71,8 +71,8 @@
     )
 }
 
-.btn--flat.btn--negative {
-    .constr-btnFlat(
+.button--flat.button--negative {
+    .constr-buttonFlat(
         @txtColor: @color-negative-6,
         @bgColor: @color-negative-17,
         @bgColorHover: @color-negative-16,
@@ -80,8 +80,8 @@
     )
 }
 
-.btn--flat.btn--positive {
-    .constr-btnFlat(
+.button--flat.button--positive {
+    .constr-buttonFlat(
         @txtColor: @color-positive-6,
         @bgColor: @color-positive-18,
         @bgColorHover: @color-positive-17,
@@ -92,7 +92,7 @@
 // constructor
 // ===========
 
-.constr-btnFlat(
+.constr-buttonFlat(
     @txtColor,
     @bgColor,
     @bgColorHover,
