--- a/src/components/code/code.less
+++ b/src/components/code/code.less
@@ -118,7 +118,7 @@ pre code {
 
 // copy button
 
-.code__copyBtn {
+.code__copyButton {
     .mixin-fs-1;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -140,7 +140,7 @@ pre code {
 
 // expand button
 
-.code__expandBtn {
+.code__expandButton {
     .mixin-fs-1;
     border-top-right-radius: 0;
     border-bottom-left-radius: 0;
