--- a/src/components/datepicker/datepicker.less
+++ b/src/components/datepicker/datepicker.less
@@ -55,15 +55,15 @@
     background: @color-base-25;
 }
 
-.datePicker__btnPrev,
-.datePicker__btnNext {
+.datePicker__buttonPrev,
+.datePicker__buttonNext {
     height: 4rem;
     position: absolute;
     top: 0;
     width: 4rem;
 }
 
-.datePicker__btnPrev {
+.datePicker__buttonPrev {
 
     .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-20);
     left: 0;
@@ -74,7 +74,7 @@
 
 }
 
-.datePicker__btnNext {
+.datePicker__buttonNext {
 
     .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-20);
     right: 0;
