--- a/src/components/icon/icon.less
+++ b/src/components/icon/icon.less
@@ -61,7 +61,7 @@
 
 /*
     Any .icon inside a parent element with a certain color modifier "inherit" the colors of their parent.
-    However, the color modifier class names applied directly to .btnDismiss (eg. icon icon--negative)
+    However, the color modifier class names applied directly to .buttonDismiss (eg. icon icon--negative)
     beat the inheritance. In order to up the specificity, we repeat the modifier class name. It's actually
     not even a hack:
 
