--- a/src/components/pagination/pagination.less
+++ b/src/components/pagination/pagination.less
@@ -32,7 +32,7 @@
     margin: .4rem;
 }
 
-.pagination__item .btn:hover {
+.pagination__item .button:hover {
     background: @color-base-23;
 }
 
@@ -41,8 +41,8 @@
 
 // active item
 
-.pagination .is--active .btn,
-.pagination .is--active .btn:hover {
+.pagination .is--active .button,
+.pagination .is--active .button:hover {
     background: @color-primary-15;
     color: @color-base-24;
 }
