--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -127,7 +127,7 @@
 
     }
 
-    .pageBtns {
+    .pageButtons {
         background: transparent;
         border-radius: 0;
         bottom: 1rem;
