--- a/src/components/stepper/stepper.less
+++ b/src/components/stepper/stepper.less
@@ -112,8 +112,8 @@
 
 // minus & plus button
 
-.stepper__btnMinus,
-.stepper__btnPlus {
+.stepper__buttonMinus,
+.stepper__buttonPlus {
 
     background: linear-gradient(to bottom, @color-base-17, @color-base-14);
     border: 0;
@@ -139,7 +139,7 @@
 
 }
 
-.stepper__btnMinus {
+.stepper__buttonMinus {
     border-radius: 0 0 0 (@defaultBorderRadius * 1px);
     bottom: 0;
 }
@@ -148,7 +148,7 @@
     .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-23, @width: 24, @height: 24);
 }
 
-.stepper__btnPlus {
+.stepper__buttonPlus {
     border-radius: (@defaultBorderRadius * 1px) 0 0 0;
     top: 0;
 }
@@ -201,8 +201,8 @@
         color: @color-base-8;
     }
 
-    .stepper__btnMinus,
-    .stepper__btnPlus {
+    .stepper__buttonMinus,
+    .stepper__buttonPlus {
 
         background: transparent;
         box-shadow: none;
@@ -236,19 +236,19 @@
         margin-left: 8.6rem;
     }
 
-    .stepper__btnMinus,
-    .stepper__btnPlus {
+    .stepper__buttonMinus,
+    .stepper__buttonPlus {
         border-radius: 0;
         height: 3.8rem;
         top: 0;
         width: 4rem;
     }
 
-    .stepper__btnMinus {
+    .stepper__buttonMinus {
         left: 4.1rem;
     }
 
-    .stepper__btnPlus {
+    .stepper__buttonPlus {
         left: 0;
     }
 
