--- a/src/components/table/table.less
+++ b/src/components/table/table.less
@@ -73,7 +73,7 @@ tr:last-child td:last-child  { border-radius: 0 0 (@defaultBorderRadius * 1px) 0
     background: @color-base-25;
     width: 2rem;
 
-    .btn {
+    .button {
         display: block;
         margin: .5rem 0;
     }
@@ -248,7 +248,7 @@ tr:last-child td:last-child  { border-radius: 0 0 (@defaultBorderRadius * 1px) 0
 
     // cells for remove buttons
 
-    .table__removeBtn {
+    .table__removeButton {
 
         padding: 0;
         text-align: center;
@@ -280,7 +280,7 @@ tr:last-child td:last-child  { border-radius: 0 0 (@defaultBorderRadius * 1px) 0
 // adjust icon positioning for compressed tables
 
 .js table.table--compressed .table__checkbox,
-.js table.table--compressed .table__removeBtn {
+.js table.table--compressed .table__removeButton {
 
     width: 2rem;
 
