--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -11,7 +11,7 @@
     <body class="noJs" yoi-environment="modal-desktop">
         <script>document.body.className='js';</script>
         <div class="modalPage">
-            <a class="btn btn--large btn--subtle m-4" href="#link_back_to_previous_page">
+            <a class="button button--large button--subtle m-4" href="#link_back_to_previous_page">
                 <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-008-s" yoi-icon />
                 <span>back</span>
             </a>
@@ -24,8 +24,8 @@
                         {{ content }}
                     </div>
                     <div class="modal__footer">
-                        <button class="btn btn--large btn--dark fl-r">OK</button>
-                        <span class="btn btn--large btn--light btn--flat fl-r m-r-1" yoi-action="closeModal">Cancel</span>
+                        <button class="button button--large button--dark fl-r">OK</button>
+                        <span class="button button--large button--light button--flat fl-r m-r-1" yoi-action="closeModal">Cancel</span>
                     </div>
                 </div>
             </div>
