--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -74,7 +74,7 @@
     z-index: 601;
 }
 
-.modal .btnDismiss {
+.modal .buttonDismiss {
     position: absolute;
     right: .5rem;
     top: .5rem;
