--- a/src/components/note/note.less
+++ b/src/components/note/note.less
@@ -20,7 +20,7 @@
 
 // dismiss/close button
 
-.note .btnDismiss {
+.note .buttonDismiss {
     border-bottom-right-radius: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
